# QuantumTransformers

./: README.md  pyproject.toml  test.py
examples/: mnist_classification.py
hpopt/: hpopt.py
notebooks/quantum/: electron-photon.ipynb
quantum_transformers/: datasets.py  quantum_layer.py  training.py  transformers.py
quantum_transformers/qmlperfcomp/torch_backend/: __init__.py  data.py  training.py
quantum_transformers/qmlperfcomp/torch_backend/classical/: __init__.py  mlp.py
quantum_transformers/qmlperfcomp/torch_backend/quantum/: __init__.py  mlp.py
