[tool.poetry]
name = "quantum_transformers"
version = "0.1.0"
description = ""
authors = ["Marçal Comajoan Cara <mcomajoancara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.0"
pennylane = "^0.38.0"
ipykernel = "^6.25.0"
jupyterlab = "^4.2.5"
matplotlib = "^3.7.2"
ipywidgets = "^8.1.0"
tqdm = "^4.66.3"
numpy = "^1.25.2"
gdown = "^4.7.1"
pylatexenc = "^2.10"
ray = {extras = ["tune"], version = "^2.43.0"}


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
nbqa = {extras = ["toolchain"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
